--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -2,6 +2,8 @@
   href: ../README.md
 - name: Linear Dynamical Systems
   items:
+    - name: Getting Started
+      href: ../examples/LinearDynamicalSystems/README.md
     - name: Kinematics
       items:
       - name: Simulated Data
