--- a/examples/LinearDynamicalSystems/Kinematics/SimulatedData/.bonsai/Bonsai.config
+++ b/examples/LinearDynamicalSystems/Kinematics/SimulatedData/.bonsai/Bonsai.config
@@ -7,18 +7,18 @@
     <Package id="Bonsai.Design.Visualizers" version="2.8.0" />
     <Package id="Bonsai.Dsp" version="2.8.0" />
     <Package id="Bonsai.Editor" version="2.8.0" />
-    <Package id="Bonsai.ML" version="0.1.0" />
-    <Package id="Bonsai.ML.LinearDynamicalSystems" version="0.1.0" />
-    <Package id="Bonsai.ML.Visualizers" version="0.1.0" />
+    <Package id="Bonsai.ML" version="0.1.0-build240209-02" />
+    <Package id="Bonsai.ML.LinearDynamicalSystems" version="0.1.0-build240209-02" />
+    <Package id="Bonsai.ML.Visualizers" version="0.1.0-build240209-02" />
     <Package id="Bonsai.Numerics" version="0.9.0" />
     <Package id="Bonsai.Scripting" version="2.8.0" />
     <Package id="Bonsai.Scripting.Expressions" version="2.8.0" />
     <Package id="Bonsai.Scripting.Expressions.Design" version="2.8.0" />
     <Package id="Bonsai.Scripting.IronPython" version="2.8.0" />
     <Package id="Bonsai.Scripting.IronPython.Design" version="2.8.0" />
-    <Package id="Bonsai.Scripting.Python" version="0.1.1" />
-    <Package id="Bonsai.System" version="2.8.1" />
-    <Package id="Bonsai.Vision" version="2.8.1" />
+    <Package id="Bonsai.Scripting.Python" version="0.2.0-build240209-01" />
+    <Package id="Bonsai.System" version="2.8.0" />
+    <Package id="Bonsai.Vision" version="2.8.0" />
     <Package id="Bonsai.Vision.Design" version="2.8.1" />
     <Package id="IronPython" version="2.7.5" />
     <Package id="IronPython.StdLib" version="2.7.5" />
@@ -32,15 +32,12 @@
     <Package id="OpenTK.GLControl" version="3.1.0" />
     <Package id="OxyPlot.Core" version="2.1.2" />
     <Package id="OxyPlot.WindowsForms" version="2.1.2" />
-    <Package id="OxyPlot.Wpf" version="2.1.2" />
-    <Package id="OxyPlot.Wpf.Shared" version="2.1.2" />
     <Package id="pythonnet" version="3.0.3" />
     <Package id="Rx-Core" version="2.2.5" />
     <Package id="Rx-Interfaces" version="2.2.5" />
     <Package id="Rx-Linq" version="2.2.5" />
     <Package id="Rx-PlatformServices" version="2.2.5" />
     <Package id="SvgNet" version="3.3.3" />
-    <Package id="System.Drawing.Common" version="8.0.1" />
     <Package id="System.Linq" version="4.3.0" />
     <Package id="System.Linq.Dynamic" version="1.0.7" />
     <Package id="System.Reflection.Emit" version="4.3.0" />
@@ -75,18 +72,18 @@
     <AssemblyLocation assemblyName="Bonsai.Design.Visualizers" processorArchitecture="MSIL" location="Packages/Bonsai.Design.Visualizers.2.8.0/lib/net462/Bonsai.Design.Visualizers.dll" />
     <AssemblyLocation assemblyName="Bonsai.Dsp" processorArchitecture="MSIL" location="Packages/Bonsai.Dsp.2.8.0/lib/net462/Bonsai.Dsp.dll" />
     <AssemblyLocation assemblyName="Bonsai.Editor" processorArchitecture="MSIL" location="Packages/Bonsai.Editor.2.8.0/lib/net472/Bonsai.Editor.dll" />
-    <AssemblyLocation assemblyName="Bonsai.ML" processorArchitecture="MSIL" location="Packages/Bonsai.ML.0.1.0/lib/net472/Bonsai.ML.dll" />
-    <AssemblyLocation assemblyName="Bonsai.ML.LinearDynamicalSystems" processorArchitecture="MSIL" location="Packages/Bonsai.ML.LinearDynamicalSystems.0.1.0/lib/net472/Bonsai.ML.LinearDynamicalSystems.dll" />
-    <AssemblyLocation assemblyName="Bonsai.ML.Visualizers" processorArchitecture="MSIL" location="Packages/Bonsai.ML.Visualizers.0.1.0/lib/net472/Bonsai.ML.Visualizers.dll" />
+    <AssemblyLocation assemblyName="Bonsai.ML" processorArchitecture="MSIL" location="Packages/Bonsai.ML.0.1.0-build240209-02/lib/net472/Bonsai.ML.dll" />
+    <AssemblyLocation assemblyName="Bonsai.ML.LinearDynamicalSystems" processorArchitecture="MSIL" location="Packages/Bonsai.ML.LinearDynamicalSystems.0.1.0-build240209-02/lib/net472/Bonsai.ML.LinearDynamicalSystems.dll" />
+    <AssemblyLocation assemblyName="Bonsai.ML.Visualizers" processorArchitecture="MSIL" location="Packages/Bonsai.ML.Visualizers.0.1.0-build240209-02/lib/net472/Bonsai.ML.Visualizers.dll" />
     <AssemblyLocation assemblyName="Bonsai.Numerics" processorArchitecture="MSIL" location="Packages/Bonsai.Numerics.0.9.0/lib/net462/Bonsai.Numerics.dll" />
     <AssemblyLocation assemblyName="Bonsai.Scripting" processorArchitecture="MSIL" location="Packages/Bonsai.Scripting.2.8.0/lib/net462/Bonsai.Scripting.dll" />
     <AssemblyLocation assemblyName="Bonsai.Scripting.Expressions" processorArchitecture="MSIL" location="Packages/Bonsai.Scripting.Expressions.2.8.0/lib/net462/Bonsai.Scripting.Expressions.dll" />
     <AssemblyLocation assemblyName="Bonsai.Scripting.Expressions.Design" processorArchitecture="MSIL" location="Packages/Bonsai.Scripting.Expressions.Design.2.8.0/lib/net462/Bonsai.Scripting.Expressions.Design.dll" />
     <AssemblyLocation assemblyName="Bonsai.Scripting.IronPython" processorArchitecture="MSIL" location="Packages/Bonsai.Scripting.IronPython.2.8.0/lib/net462/Bonsai.Scripting.IronPython.dll" />
     <AssemblyLocation assemblyName="Bonsai.Scripting.IronPython.Design" processorArchitecture="MSIL" location="Packages/Bonsai.Scripting.IronPython.Design.2.8.0/lib/net462/Bonsai.Scripting.IronPython.Design.dll" />
-    <AssemblyLocation assemblyName="Bonsai.Scripting.Python" processorArchitecture="MSIL" location="Packages/Bonsai.Scripting.Python.0.1.1/lib/net472/Bonsai.Scripting.Python.dll" />
-    <AssemblyLocation assemblyName="Bonsai.System" processorArchitecture="MSIL" location="Packages/Bonsai.System.2.8.1/lib/net462/Bonsai.System.dll" />
-    <AssemblyLocation assemblyName="Bonsai.Vision" processorArchitecture="MSIL" location="Packages/Bonsai.Vision.2.8.1/lib/net462/Bonsai.Vision.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Scripting.Python" processorArchitecture="MSIL" location="Packages/Bonsai.Scripting.Python.0.2.0-build240209-01/lib/net472/Bonsai.Scripting.Python.dll" />
+    <AssemblyLocation assemblyName="Bonsai.System" processorArchitecture="MSIL" location="Packages/Bonsai.System.2.8.0/lib/net462/Bonsai.System.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Vision" processorArchitecture="MSIL" location="Packages/Bonsai.Vision.2.8.0/lib/net462/Bonsai.Vision.dll" />
     <AssemblyLocation assemblyName="Bonsai.Vision.Design" processorArchitecture="MSIL" location="Packages/Bonsai.Vision.Design.2.8.1/lib/net462/Bonsai.Vision.Design.dll" />
     <AssemblyLocation assemblyName="IronPython" processorArchitecture="MSIL" location="Packages/IronPython.2.7.5/lib/Net45/IronPython.dll" />
     <AssemblyLocation assemblyName="IronPython.Modules" processorArchitecture="MSIL" location="Packages/IronPython.2.7.5/lib/Net45/IronPython.Modules.dll" />
@@ -106,12 +103,9 @@
     <AssemblyLocation assemblyName="OpenTK.GLControl" processorArchitecture="MSIL" location="Packages/OpenTK.GLControl.3.1.0/lib/net20/OpenTK.GLControl.dll" />
     <AssemblyLocation assemblyName="OxyPlot" processorArchitecture="MSIL" location="Packages/OxyPlot.Core.2.1.2/lib/net45/OxyPlot.dll" />
     <AssemblyLocation assemblyName="OxyPlot.WindowsForms" processorArchitecture="MSIL" location="Packages/OxyPlot.WindowsForms.2.1.2/lib/net45/OxyPlot.WindowsForms.dll" />
-    <AssemblyLocation assemblyName="OxyPlot.Wpf" processorArchitecture="MSIL" location="Packages/OxyPlot.Wpf.2.1.2/lib/net45/OxyPlot.Wpf.dll" />
-    <AssemblyLocation assemblyName="OxyPlot.Wpf.Shared" processorArchitecture="MSIL" location="Packages/OxyPlot.Wpf.Shared.2.1.2/lib/net45/OxyPlot.Wpf.Shared.dll" />
     <AssemblyLocation assemblyName="Python.Runtime" processorArchitecture="MSIL" location="Packages/pythonnet.3.0.3/lib/netstandard2.0/Python.Runtime.dll" />
     <AssemblyLocation assemblyName="ScintillaNET" processorArchitecture="MSIL" location="Packages/jacobslusser.ScintillaNET.3.6.3/lib/net40/ScintillaNET.dll" />
     <AssemblyLocation assemblyName="SVG" processorArchitecture="MSIL" location="Packages/SvgNet.3.3.3/lib/net462/SVG.dll" />
-    <AssemblyLocation assemblyName="System.Drawing.Common" processorArchitecture="MSIL" location="Packages/System.Drawing.Common.8.0.1/lib/net462/System.Drawing.Common.dll" />
     <AssemblyLocation assemblyName="System.Linq" processorArchitecture="MSIL" location="Packages/System.Linq.4.3.0/lib/net463/System.Linq.dll" />
     <AssemblyLocation assemblyName="System.Linq.Dynamic" processorArchitecture="MSIL" location="Packages/System.Linq.Dynamic.1.0.7/lib/net40/System.Linq.Dynamic.dll" />
     <AssemblyLocation assemblyName="System.Reactive.Core" processorArchitecture="MSIL" location="Packages/Rx-Core.2.2.5/lib/net45/System.Reactive.Core.dll" />
