--- a/examples/LinearDynamicalSystems/Kinematics/ZebrafishCentroidTracking/.bonsai/Bonsai.config
+++ b/examples/LinearDynamicalSystems/Kinematics/ZebrafishCentroidTracking/.bonsai/Bonsai.config
@@ -1,25 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <PackageConfiguration xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <Packages>
-    <Package id="AForge" version="2.2.5" />
-    <Package id="AForge.Video" version="2.2.5" />
-    <Package id="AForge.Video.DirectShow" version="2.2.5" />
     <Package id="Bonsai" version="2.8.1" />
     <Package id="Bonsai.Core" version="2.8.1" />
     <Package id="Bonsai.Design" version="2.8.0" />
     <Package id="Bonsai.Design.Visualizers" version="2.8.0" />
     <Package id="Bonsai.Dsp" version="2.8.0" />
     <Package id="Bonsai.Editor" version="2.8.0" />
-    <Package id="Bonsai.ML" version="0.1.0" />
-    <Package id="Bonsai.ML.LinearDynamicalSystems" version="0.1.0" />
-    <Package id="Bonsai.ML.Visualizers" version="0.1.0" />
-    <Package id="Bonsai.Numerics" version="0.9.0" />
+    <Package id="Bonsai.ML" version="0.1.0-build240209-02" />
+    <Package id="Bonsai.ML.LinearDynamicalSystems" version="0.1.0-build240209-02" />
+    <Package id="Bonsai.ML.Visualizers" version="0.1.0-build240209-02" />
     <Package id="Bonsai.Scripting" version="2.8.0" />
     <Package id="Bonsai.Scripting.Expressions" version="2.8.0" />
     <Package id="Bonsai.Scripting.Expressions.Design" version="2.8.0" />
     <Package id="Bonsai.Scripting.IronPython" version="2.8.0" />
     <Package id="Bonsai.Scripting.IronPython.Design" version="2.8.0" />
-    <Package id="Bonsai.Scripting.Python" version="0.1.1" />
+    <Package id="Bonsai.Scripting.Python" version="0.2.0-build240209-01" />
     <Package id="Bonsai.System" version="2.8.0" />
     <Package id="Bonsai.Vision" version="2.8.0" />
     <Package id="Bonsai.Vision.Design" version="2.8.1" />
@@ -27,7 +23,6 @@
     <Package id="IronPython.StdLib" version="2.7.5" />
     <Package id="jacobslusser.ScintillaNET" version="3.6.3" />
     <Package id="Markdig" version="0.18.1" />
-    <Package id="MathNet.Numerics" version="4.15.0" />
     <Package id="Microsoft.CSharp" version="4.7.0" />
     <Package id="Microsoft.Web.WebView2" version="1.0.1823.32" />
     <Package id="OpenCV.Net" version="3.4.2" />
@@ -57,7 +52,6 @@
     <AssemblyReference assemblyName="Bonsai.ML" />
     <AssemblyReference assemblyName="Bonsai.ML.LinearDynamicalSystems" />
     <AssemblyReference assemblyName="Bonsai.ML.Visualizers" />
-    <AssemblyReference assemblyName="Bonsai.Numerics" />
     <AssemblyReference assemblyName="Bonsai.Scripting" />
     <AssemblyReference assemblyName="Bonsai.Scripting.Expressions" />
     <AssemblyReference assemblyName="Bonsai.Scripting.Expressions.Design" />
@@ -69,25 +63,21 @@
     <AssemblyReference assemblyName="Bonsai.Vision.Design" />
   </AssemblyReferences>
   <AssemblyLocations>
-    <AssemblyLocation assemblyName="AForge" processorArchitecture="MSIL" location="Packages/AForge.2.2.5/lib/AForge.dll" />
-    <AssemblyLocation assemblyName="AForge.Video" processorArchitecture="MSIL" location="Packages/AForge.Video.2.2.5/lib/AForge.Video.dll" />
-    <AssemblyLocation assemblyName="AForge.Video.DirectShow" processorArchitecture="MSIL" location="Packages/AForge.Video.DirectShow.2.2.5/lib/AForge.Video.DirectShow.dll" />
     <AssemblyLocation assemblyName="Bonsai" processorArchitecture="MSIL" location="Packages/Bonsai.2.8.1/lib/net48/Bonsai.exe" />
     <AssemblyLocation assemblyName="Bonsai.Core" processorArchitecture="MSIL" location="Packages/Bonsai.Core.2.8.1/lib/net462/Bonsai.Core.dll" />
     <AssemblyLocation assemblyName="Bonsai.Design" processorArchitecture="MSIL" location="Packages/Bonsai.Design.2.8.0/lib/net462/Bonsai.Design.dll" />
     <AssemblyLocation assemblyName="Bonsai.Design.Visualizers" processorArchitecture="MSIL" location="Packages/Bonsai.Design.Visualizers.2.8.0/lib/net462/Bonsai.Design.Visualizers.dll" />
     <AssemblyLocation assemblyName="Bonsai.Dsp" processorArchitecture="MSIL" location="Packages/Bonsai.Dsp.2.8.0/lib/net462/Bonsai.Dsp.dll" />
     <AssemblyLocation assemblyName="Bonsai.Editor" processorArchitecture="MSIL" location="Packages/Bonsai.Editor.2.8.0/lib/net472/Bonsai.Editor.dll" />
-    <AssemblyLocation assemblyName="Bonsai.ML" processorArchitecture="MSIL" location="Packages/Bonsai.ML.0.1.0/lib/net472/Bonsai.ML.dll" />
-    <AssemblyLocation assemblyName="Bonsai.ML.LinearDynamicalSystems" processorArchitecture="MSIL" location="Packages/Bonsai.ML.LinearDynamicalSystems.0.1.0/lib/net472/Bonsai.ML.LinearDynamicalSystems.dll" />
-    <AssemblyLocation assemblyName="Bonsai.ML.Visualizers" processorArchitecture="MSIL" location="Packages/Bonsai.ML.Visualizers.0.1.0/lib/net472/Bonsai.ML.Visualizers.dll" />
-    <AssemblyLocation assemblyName="Bonsai.Numerics" processorArchitecture="MSIL" location="Packages/Bonsai.Numerics.0.9.0/lib/net462/Bonsai.Numerics.dll" />
+    <AssemblyLocation assemblyName="Bonsai.ML" processorArchitecture="MSIL" location="Packages/Bonsai.ML.0.1.0-build240209-02/lib/net472/Bonsai.ML.dll" />
+    <AssemblyLocation assemblyName="Bonsai.ML.LinearDynamicalSystems" processorArchitecture="MSIL" location="Packages/Bonsai.ML.LinearDynamicalSystems.0.1.0-build240209-02/lib/net472/Bonsai.ML.LinearDynamicalSystems.dll" />
+    <AssemblyLocation assemblyName="Bonsai.ML.Visualizers" processorArchitecture="MSIL" location="Packages/Bonsai.ML.Visualizers.0.1.0-build240209-02/lib/net472/Bonsai.ML.Visualizers.dll" />
     <AssemblyLocation assemblyName="Bonsai.Scripting" processorArchitecture="MSIL" location="Packages/Bonsai.Scripting.2.8.0/lib/net462/Bonsai.Scripting.dll" />
     <AssemblyLocation assemblyName="Bonsai.Scripting.Expressions" processorArchitecture="MSIL" location="Packages/Bonsai.Scripting.Expressions.2.8.0/lib/net462/Bonsai.Scripting.Expressions.dll" />
     <AssemblyLocation assemblyName="Bonsai.Scripting.Expressions.Design" processorArchitecture="MSIL" location="Packages/Bonsai.Scripting.Expressions.Design.2.8.0/lib/net462/Bonsai.Scripting.Expressions.Design.dll" />
     <AssemblyLocation assemblyName="Bonsai.Scripting.IronPython" processorArchitecture="MSIL" location="Packages/Bonsai.Scripting.IronPython.2.8.0/lib/net462/Bonsai.Scripting.IronPython.dll" />
     <AssemblyLocation assemblyName="Bonsai.Scripting.IronPython.Design" processorArchitecture="MSIL" location="Packages/Bonsai.Scripting.IronPython.Design.2.8.0/lib/net462/Bonsai.Scripting.IronPython.Design.dll" />
-    <AssemblyLocation assemblyName="Bonsai.Scripting.Python" processorArchitecture="MSIL" location="Packages/Bonsai.Scripting.Python.0.1.1/lib/net472/Bonsai.Scripting.Python.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Scripting.Python" processorArchitecture="MSIL" location="Packages/Bonsai.Scripting.Python.0.2.0-build240209-01/lib/net472/Bonsai.Scripting.Python.dll" />
     <AssemblyLocation assemblyName="Bonsai.System" processorArchitecture="MSIL" location="Packages/Bonsai.System.2.8.0/lib/net462/Bonsai.System.dll" />
     <AssemblyLocation assemblyName="Bonsai.Vision" processorArchitecture="MSIL" location="Packages/Bonsai.Vision.2.8.0/lib/net462/Bonsai.Vision.dll" />
     <AssemblyLocation assemblyName="Bonsai.Vision.Design" processorArchitecture="MSIL" location="Packages/Bonsai.Vision.Design.2.8.1/lib/net462/Bonsai.Vision.Design.dll" />
@@ -96,7 +86,6 @@
     <AssemblyLocation assemblyName="IronPython.SQLite" processorArchitecture="MSIL" location="Packages/IronPython.2.7.5/lib/Net45/IronPython.SQLite.dll" />
     <AssemblyLocation assemblyName="IronPython.Wpf" processorArchitecture="MSIL" location="Packages/IronPython.2.7.5/lib/Net45/IronPython.Wpf.dll" />
     <AssemblyLocation assemblyName="Markdig" processorArchitecture="MSIL" location="Packages/Markdig.0.18.1/lib/net40/Markdig.dll" />
-    <AssemblyLocation assemblyName="MathNet.Numerics" processorArchitecture="MSIL" location="Packages/MathNet.Numerics.4.15.0/lib/net461/MathNet.Numerics.dll" />
     <AssemblyLocation assemblyName="Microsoft.Dynamic" processorArchitecture="MSIL" location="Packages/IronPython.2.7.5/lib/Net45/Microsoft.Dynamic.dll" />
     <AssemblyLocation assemblyName="Microsoft.Scripting" processorArchitecture="MSIL" location="Packages/IronPython.2.7.5/lib/Net45/Microsoft.Scripting.dll" />
     <AssemblyLocation assemblyName="Microsoft.Scripting.AspNet" processorArchitecture="MSIL" location="Packages/IronPython.2.7.5/lib/Net45/Microsoft.Scripting.AspNet.dll" />
