--- a/examples/LinearDynamicalSystems/Kinematics/SimulatedData/.bonsai/Bonsai.config
+++ b/examples/LinearDynamicalSystems/Kinematics/SimulatedData/.bonsai/Bonsai.config
@@ -19,6 +19,7 @@
     <Package id="Bonsai.Scripting.Python" version="0.2.0-build240209-01" />
     <Package id="Bonsai.System" version="2.8.1" />
     <Package id="Bonsai.Vision" version="2.8.1" />
+    <Package id="Bonsai.Vision.Design" version="2.8.1" />
     <Package id="IronPython" version="2.7.5" />
     <Package id="IronPython.StdLib" version="2.7.5" />
     <Package id="jacobslusser.ScintillaNET" version="3.6.3" />
@@ -27,6 +28,8 @@
     <Package id="Microsoft.CSharp" version="4.7.0" />
     <Package id="Microsoft.Web.WebView2" version="1.0.1823.32" />
     <Package id="OpenCV.Net" version="3.4.2" />
+    <Package id="OpenTK" version="3.1.0" />
+    <Package id="OpenTK.GLControl" version="3.1.0" />
     <Package id="OxyPlot.Core" version="2.1.2" />
     <Package id="OxyPlot.WindowsForms" version="2.1.2" />
     <Package id="pythonnet" version="3.0.3" />
@@ -61,6 +64,7 @@
     <AssemblyReference assemblyName="Bonsai.Scripting.Python" />
     <AssemblyReference assemblyName="Bonsai.System" />
     <AssemblyReference assemblyName="Bonsai.Vision" />
+    <AssemblyReference assemblyName="Bonsai.Vision.Design" />
   </AssemblyReferences>
   <AssemblyLocations>
     <AssemblyLocation assemblyName="Bonsai" processorArchitecture="MSIL" location="Packages\Bonsai.2.8.1\lib\net48\Bonsai.exe" />
@@ -81,6 +85,7 @@
     <AssemblyLocation assemblyName="Bonsai.Scripting.Python" processorArchitecture="MSIL" location="Packages\Bonsai.Scripting.Python.0.2.0-build240209-01\lib\net472\Bonsai.Scripting.Python.dll" />
     <AssemblyLocation assemblyName="Bonsai.System" processorArchitecture="MSIL" location="Packages\Bonsai.System.2.8.1\lib\net462\Bonsai.System.dll" />
     <AssemblyLocation assemblyName="Bonsai.Vision" processorArchitecture="MSIL" location="Packages\Bonsai.Vision.2.8.1\lib\net462\Bonsai.Vision.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Vision.Design" processorArchitecture="MSIL" location="Packages\Bonsai.Vision.Design.2.8.1\lib\net462\Bonsai.Vision.Design.dll" />
     <AssemblyLocation assemblyName="IronPython" processorArchitecture="MSIL" location="Packages\IronPython.2.7.5\lib\Net45\IronPython.dll" />
     <AssemblyLocation assemblyName="IronPython.Modules" processorArchitecture="MSIL" location="Packages\IronPython.2.7.5\lib\Net45\IronPython.Modules.dll" />
     <AssemblyLocation assemblyName="IronPython.SQLite" processorArchitecture="MSIL" location="Packages\IronPython.2.7.5\lib\Net45\IronPython.SQLite.dll" />
@@ -95,6 +100,8 @@
     <AssemblyLocation assemblyName="Microsoft.Web.WebView2.WinForms" processorArchitecture="MSIL" location="Packages\Microsoft.Web.WebView2.1.0.1823.32\lib\net45\Microsoft.Web.WebView2.WinForms.dll" />
     <AssemblyLocation assemblyName="Microsoft.Web.WebView2.Wpf" processorArchitecture="MSIL" location="Packages\Microsoft.Web.WebView2.1.0.1823.32\lib\net45\Microsoft.Web.WebView2.Wpf.dll" />
     <AssemblyLocation assemblyName="OpenCV.Net" processorArchitecture="MSIL" location="Packages\OpenCV.Net.3.4.2\lib\net462\OpenCV.Net.dll" />
+    <AssemblyLocation assemblyName="OpenTK" processorArchitecture="MSIL" location="Packages\OpenTK.3.1.0\lib\net20\OpenTK.dll" />
+    <AssemblyLocation assemblyName="OpenTK.GLControl" processorArchitecture="MSIL" location="Packages\OpenTK.GLControl.3.1.0\lib\net20\OpenTK.GLControl.dll" />
     <AssemblyLocation assemblyName="OxyPlot" processorArchitecture="MSIL" location="Packages\OxyPlot.Core.2.1.2\lib\net45\OxyPlot.dll" />
     <AssemblyLocation assemblyName="OxyPlot.WindowsForms" processorArchitecture="MSIL" location="Packages\OxyPlot.WindowsForms.2.1.2\lib\net45\OxyPlot.WindowsForms.dll" />
     <AssemblyLocation assemblyName="Python.Runtime" processorArchitecture="MSIL" location="Packages\pythonnet.3.0.3\lib\netstandard2.0\Python.Runtime.dll" />
