removed requirements.txt files. updated bonsai config and sh script

--- a/examples/LinearDynamicalSystems/Kinematics/ZebrafishCentroidTracking/.bonsai/Bonsai.config
+++ b/examples/LinearDynamicalSystems/Kinematics/ZebrafishCentroidTracking/.bonsai/Bonsai.config
@@ -39,6 +39,7 @@
     <Package id="System.Linq" version="4.3.0" />
     <Package id="System.Linq.Dynamic" version="1.0.7" />
     <Package id="System.Reflection.Emit" version="4.3.0" />
+    <Package id="System.Windows.Forms" version="4.0.0" />
     <Package id="YamlDotNet" version="13.7.1" />
     <Package id="ZedGraph" version="5.1.7" />
   </Packages>
@@ -63,59 +64,62 @@
     <AssemblyReference assemblyName="Bonsai.Vision.Design" />
   </AssemblyReferences>
   <AssemblyLocations>
-    <AssemblyLocation assemblyName="Bonsai" processorArchitecture="MSIL" location="Packages/Bonsai.2.8.1/lib/net48/Bonsai.exe" />
-    <AssemblyLocation assemblyName="Bonsai.Core" processorArchitecture="MSIL" location="Packages/Bonsai.Core.2.8.1/lib/net462/Bonsai.Core.dll" />
-    <AssemblyLocation assemblyName="Bonsai.Design" processorArchitecture="MSIL" location="Packages/Bonsai.Design.2.8.0/lib/net462/Bonsai.Design.dll" />
-    <AssemblyLocation assemblyName="Bonsai.Design.Visualizers" processorArchitecture="MSIL" location="Packages/Bonsai.Design.Visualizers.2.8.0/lib/net462/Bonsai.Design.Visualizers.dll" />
-    <AssemblyLocation assemblyName="Bonsai.Dsp" processorArchitecture="MSIL" location="Packages/Bonsai.Dsp.2.8.0/lib/net462/Bonsai.Dsp.dll" />
-    <AssemblyLocation assemblyName="Bonsai.Editor" processorArchitecture="MSIL" location="Packages/Bonsai.Editor.2.8.0/lib/net472/Bonsai.Editor.dll" />
-    <AssemblyLocation assemblyName="Bonsai.ML" processorArchitecture="MSIL" location="Packages/Bonsai.ML.0.1.0-build240209-02/lib/net472/Bonsai.ML.dll" />
-    <AssemblyLocation assemblyName="Bonsai.ML.LinearDynamicalSystems" processorArchitecture="MSIL" location="Packages/Bonsai.ML.LinearDynamicalSystems.0.1.0-build240209-02/lib/net472/Bonsai.ML.LinearDynamicalSystems.dll" />
-    <AssemblyLocation assemblyName="Bonsai.ML.Visualizers" processorArchitecture="MSIL" location="Packages/Bonsai.ML.Visualizers.0.1.0-build240209-02/lib/net472/Bonsai.ML.Visualizers.dll" />
-    <AssemblyLocation assemblyName="Bonsai.Scripting" processorArchitecture="MSIL" location="Packages/Bonsai.Scripting.2.8.0/lib/net462/Bonsai.Scripting.dll" />
-    <AssemblyLocation assemblyName="Bonsai.Scripting.Expressions" processorArchitecture="MSIL" location="Packages/Bonsai.Scripting.Expressions.2.8.0/lib/net462/Bonsai.Scripting.Expressions.dll" />
-    <AssemblyLocation assemblyName="Bonsai.Scripting.Expressions.Design" processorArchitecture="MSIL" location="Packages/Bonsai.Scripting.Expressions.Design.2.8.0/lib/net462/Bonsai.Scripting.Expressions.Design.dll" />
-    <AssemblyLocation assemblyName="Bonsai.Scripting.IronPython" processorArchitecture="MSIL" location="Packages/Bonsai.Scripting.IronPython.2.8.0/lib/net462/Bonsai.Scripting.IronPython.dll" />
-    <AssemblyLocation assemblyName="Bonsai.Scripting.IronPython.Design" processorArchitecture="MSIL" location="Packages/Bonsai.Scripting.IronPython.Design.2.8.0/lib/net462/Bonsai.Scripting.IronPython.Design.dll" />
-    <AssemblyLocation assemblyName="Bonsai.Scripting.Python" processorArchitecture="MSIL" location="Packages/Bonsai.Scripting.Python.0.2.0-build240209-01/lib/net472/Bonsai.Scripting.Python.dll" />
-    <AssemblyLocation assemblyName="Bonsai.System" processorArchitecture="MSIL" location="Packages/Bonsai.System.2.8.0/lib/net462/Bonsai.System.dll" />
-    <AssemblyLocation assemblyName="Bonsai.Vision" processorArchitecture="MSIL" location="Packages/Bonsai.Vision.2.8.0/lib/net462/Bonsai.Vision.dll" />
-    <AssemblyLocation assemblyName="Bonsai.Vision.Design" processorArchitecture="MSIL" location="Packages/Bonsai.Vision.Design.2.8.1/lib/net462/Bonsai.Vision.Design.dll" />
-    <AssemblyLocation assemblyName="IronPython" processorArchitecture="MSIL" location="Packages/IronPython.2.7.5/lib/Net45/IronPython.dll" />
-    <AssemblyLocation assemblyName="IronPython.Modules" processorArchitecture="MSIL" location="Packages/IronPython.2.7.5/lib/Net45/IronPython.Modules.dll" />
-    <AssemblyLocation assemblyName="IronPython.SQLite" processorArchitecture="MSIL" location="Packages/IronPython.2.7.5/lib/Net45/IronPython.SQLite.dll" />
-    <AssemblyLocation assemblyName="IronPython.Wpf" processorArchitecture="MSIL" location="Packages/IronPython.2.7.5/lib/Net45/IronPython.Wpf.dll" />
-    <AssemblyLocation assemblyName="Markdig" processorArchitecture="MSIL" location="Packages/Markdig.0.18.1/lib/net40/Markdig.dll" />
-    <AssemblyLocation assemblyName="Microsoft.Dynamic" processorArchitecture="MSIL" location="Packages/IronPython.2.7.5/lib/Net45/Microsoft.Dynamic.dll" />
-    <AssemblyLocation assemblyName="Microsoft.Scripting" processorArchitecture="MSIL" location="Packages/IronPython.2.7.5/lib/Net45/Microsoft.Scripting.dll" />
-    <AssemblyLocation assemblyName="Microsoft.Scripting.AspNet" processorArchitecture="MSIL" location="Packages/IronPython.2.7.5/lib/Net45/Microsoft.Scripting.AspNet.dll" />
-    <AssemblyLocation assemblyName="Microsoft.Scripting.Metadata" processorArchitecture="MSIL" location="Packages/IronPython.2.7.5/lib/Net45/Microsoft.Scripting.Metadata.dll" />
-    <AssemblyLocation assemblyName="Microsoft.Web.WebView2.Core" processorArchitecture="MSIL" location="Packages/Microsoft.Web.WebView2.1.0.1823.32/lib/net45/Microsoft.Web.WebView2.Core.dll" />
-    <AssemblyLocation assemblyName="Microsoft.Web.WebView2.WinForms" processorArchitecture="MSIL" location="Packages/Microsoft.Web.WebView2.1.0.1823.32/lib/net45/Microsoft.Web.WebView2.WinForms.dll" />
-    <AssemblyLocation assemblyName="Microsoft.Web.WebView2.Wpf" processorArchitecture="MSIL" location="Packages/Microsoft.Web.WebView2.1.0.1823.32/lib/net45/Microsoft.Web.WebView2.Wpf.dll" />
-    <AssemblyLocation assemblyName="OpenCV.Net" processorArchitecture="MSIL" location="Packages/OpenCV.Net.3.4.2/lib/net462/OpenCV.Net.dll" />
-    <AssemblyLocation assemblyName="OpenTK" processorArchitecture="MSIL" location="Packages/OpenTK.3.1.0/lib/net20/OpenTK.dll" />
-    <AssemblyLocation assemblyName="OpenTK.GLControl" processorArchitecture="MSIL" location="Packages/OpenTK.GLControl.3.1.0/lib/net20/OpenTK.GLControl.dll" />
-    <AssemblyLocation assemblyName="OxyPlot" processorArchitecture="MSIL" location="Packages/OxyPlot.Core.2.1.2/lib/net45/OxyPlot.dll" />
-    <AssemblyLocation assemblyName="OxyPlot.WindowsForms" processorArchitecture="MSIL" location="Packages/OxyPlot.WindowsForms.2.1.2/lib/net45/OxyPlot.WindowsForms.dll" />
-    <AssemblyLocation assemblyName="Python.Runtime" processorArchitecture="MSIL" location="Packages/pythonnet.3.0.3/lib/netstandard2.0/Python.Runtime.dll" />
-    <AssemblyLocation assemblyName="ScintillaNET" processorArchitecture="MSIL" location="Packages/jacobslusser.ScintillaNET.3.6.3/lib/net40/ScintillaNET.dll" />
-    <AssemblyLocation assemblyName="SVG" processorArchitecture="MSIL" location="Packages/SvgNet.3.3.3/lib/net462/SVG.dll" />
-    <AssemblyLocation assemblyName="System.Linq" processorArchitecture="MSIL" location="Packages/System.Linq.4.3.0/lib/net463/System.Linq.dll" />
-    <AssemblyLocation assemblyName="System.Linq.Dynamic" processorArchitecture="MSIL" location="Packages/System.Linq.Dynamic.1.0.7/lib/net40/System.Linq.Dynamic.dll" />
-    <AssemblyLocation assemblyName="System.Reactive.Core" processorArchitecture="MSIL" location="Packages/Rx-Core.2.2.5/lib/net45/System.Reactive.Core.dll" />
-    <AssemblyLocation assemblyName="System.Reactive.Interfaces" processorArchitecture="MSIL" location="Packages/Rx-Interfaces.2.2.5/lib/net45/System.Reactive.Interfaces.dll" />
-    <AssemblyLocation assemblyName="System.Reactive.Linq" processorArchitecture="MSIL" location="Packages/Rx-Linq.2.2.5/lib/net45/System.Reactive.Linq.dll" />
-    <AssemblyLocation assemblyName="System.Reactive.PlatformServices" processorArchitecture="MSIL" location="Packages/Rx-PlatformServices.2.2.5/lib/net45/System.Reactive.PlatformServices.dll" />
-    <AssemblyLocation assemblyName="YamlDotNet" processorArchitecture="MSIL" location="Packages/YamlDotNet.13.7.1/lib/net47/YamlDotNet.dll" />
-    <AssemblyLocation assemblyName="ZedGraph" processorArchitecture="MSIL" location="Packages/ZedGraph.5.1.7/lib/net35-Client/ZedGraph.dll" />
+    <AssemblyLocation assemblyName="Bonsai" processorArchitecture="MSIL" location="Packages\Bonsai.2.8.1\lib\net48\Bonsai.exe" />
+    <AssemblyLocation assemblyName="Bonsai.Core" processorArchitecture="MSIL" location="Packages\Bonsai.Core.2.8.1\lib\net462\Bonsai.Core.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Design" processorArchitecture="MSIL" location="Packages\Bonsai.Design.2.8.0\lib\net462\Bonsai.Design.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Design.Visualizers" processorArchitecture="MSIL" location="Packages\Bonsai.Design.Visualizers.2.8.0\lib\net462\Bonsai.Design.Visualizers.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Dsp" processorArchitecture="MSIL" location="Packages\Bonsai.Dsp.2.8.0\lib\net462\Bonsai.Dsp.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Editor" processorArchitecture="MSIL" location="Packages\Bonsai.Editor.2.8.0\lib\net472\Bonsai.Editor.dll" />
+    <AssemblyLocation assemblyName="Bonsai.ML" processorArchitecture="MSIL" location="Packages\Bonsai.ML.0.1.0-build240209-02\lib\net472\Bonsai.ML.dll" />
+    <AssemblyLocation assemblyName="Bonsai.ML.LinearDynamicalSystems" processorArchitecture="MSIL" location="Packages\Bonsai.ML.LinearDynamicalSystems.0.1.0-build240209-02\lib\net472\Bonsai.ML.LinearDynamicalSystems.dll" />
+    <AssemblyLocation assemblyName="Bonsai.ML.Visualizers" processorArchitecture="MSIL" location="Packages\Bonsai.ML.Visualizers.0.1.0-build240209-02\lib\net472\Bonsai.ML.Visualizers.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Scripting" processorArchitecture="MSIL" location="Packages\Bonsai.Scripting.2.8.0\lib\net462\Bonsai.Scripting.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Scripting.Expressions" processorArchitecture="MSIL" location="Packages\Bonsai.Scripting.Expressions.2.8.0\lib\net462\Bonsai.Scripting.Expressions.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Scripting.Expressions.Design" processorArchitecture="MSIL" location="Packages\Bonsai.Scripting.Expressions.Design.2.8.0\lib\net462\Bonsai.Scripting.Expressions.Design.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Scripting.IronPython" processorArchitecture="MSIL" location="Packages\Bonsai.Scripting.IronPython.2.8.0\lib\net462\Bonsai.Scripting.IronPython.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Scripting.IronPython.Design" processorArchitecture="MSIL" location="Packages\Bonsai.Scripting.IronPython.Design.2.8.0\lib\net462\Bonsai.Scripting.IronPython.Design.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Scripting.Python" processorArchitecture="MSIL" location="Packages\Bonsai.Scripting.Python.0.2.0-build240209-01\lib\net472\Bonsai.Scripting.Python.dll" />
+    <AssemblyLocation assemblyName="Bonsai.System" processorArchitecture="MSIL" location="Packages\Bonsai.System.2.8.0\lib\net462\Bonsai.System.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Vision" processorArchitecture="MSIL" location="Packages\Bonsai.Vision.2.8.0\lib\net462\Bonsai.Vision.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Vision.Design" processorArchitecture="MSIL" location="Packages\Bonsai.Vision.Design.2.8.1\lib\net462\Bonsai.Vision.Design.dll" />
+    <AssemblyLocation assemblyName="IronPython" processorArchitecture="MSIL" location="Packages\IronPython.2.7.5\lib\Net45\IronPython.dll" />
+    <AssemblyLocation assemblyName="IronPython.Modules" processorArchitecture="MSIL" location="Packages\IronPython.2.7.5\lib\Net45\IronPython.Modules.dll" />
+    <AssemblyLocation assemblyName="IronPython.SQLite" processorArchitecture="MSIL" location="Packages\IronPython.2.7.5\lib\Net45\IronPython.SQLite.dll" />
+    <AssemblyLocation assemblyName="IronPython.Wpf" processorArchitecture="MSIL" location="Packages\IronPython.2.7.5\lib\Net45\IronPython.Wpf.dll" />
+    <AssemblyLocation assemblyName="Markdig" processorArchitecture="MSIL" location="Packages\Markdig.0.18.1\lib\net40\Markdig.dll" />
+    <AssemblyLocation assemblyName="Microsoft.Dynamic" processorArchitecture="MSIL" location="Packages\IronPython.2.7.5\lib\Net45\Microsoft.Dynamic.dll" />
+    <AssemblyLocation assemblyName="Microsoft.Scripting" processorArchitecture="MSIL" location="Packages\IronPython.2.7.5\lib\Net45\Microsoft.Scripting.dll" />
+    <AssemblyLocation assemblyName="Microsoft.Scripting.AspNet" processorArchitecture="MSIL" location="Packages\IronPython.2.7.5\lib\Net45\Microsoft.Scripting.AspNet.dll" />
+    <AssemblyLocation assemblyName="Microsoft.Scripting.Metadata" processorArchitecture="MSIL" location="Packages\IronPython.2.7.5\lib\Net45\Microsoft.Scripting.Metadata.dll" />
+    <AssemblyLocation assemblyName="Microsoft.Web.WebView2.Core" processorArchitecture="MSIL" location="Packages\Microsoft.Web.WebView2.1.0.1823.32\lib\net45\Microsoft.Web.WebView2.Core.dll" />
+    <AssemblyLocation assemblyName="Microsoft.Web.WebView2.WinForms" processorArchitecture="MSIL" location="Packages\Microsoft.Web.WebView2.1.0.1823.32\lib\net45\Microsoft.Web.WebView2.WinForms.dll" />
+    <AssemblyLocation assemblyName="Microsoft.Web.WebView2.Wpf" processorArchitecture="MSIL" location="Packages\Microsoft.Web.WebView2.1.0.1823.32\lib\net45\Microsoft.Web.WebView2.Wpf.dll" />
+    <AssemblyLocation assemblyName="OpenCV.Net" processorArchitecture="MSIL" location="Packages\OpenCV.Net.3.4.2\lib\net462\OpenCV.Net.dll" />
+    <AssemblyLocation assemblyName="OpenTK" processorArchitecture="MSIL" location="Packages\OpenTK.3.1.0\lib\net20\OpenTK.dll" />
+    <AssemblyLocation assemblyName="OpenTK.GLControl" processorArchitecture="MSIL" location="Packages\OpenTK.GLControl.3.1.0\lib\net20\OpenTK.GLControl.dll" />
+    <AssemblyLocation assemblyName="OxyPlot" processorArchitecture="MSIL" location="Packages\OxyPlot.Core.2.1.2\lib\net45\OxyPlot.dll" />
+    <AssemblyLocation assemblyName="OxyPlot.WindowsForms" processorArchitecture="MSIL" location="Packages\OxyPlot.WindowsForms.2.1.2\lib\net45\OxyPlot.WindowsForms.dll" />
+    <AssemblyLocation assemblyName="Python.Runtime" processorArchitecture="MSIL" location="Packages\pythonnet.3.0.3\lib\netstandard2.0\Python.Runtime.dll" />
+    <AssemblyLocation assemblyName="ScintillaNET" processorArchitecture="MSIL" location="Packages\jacobslusser.ScintillaNET.3.6.3\lib\net40\ScintillaNET.dll" />
+    <AssemblyLocation assemblyName="SVG" processorArchitecture="MSIL" location="Packages\SvgNet.3.3.3\lib\net462\SVG.dll" />
+    <AssemblyLocation assemblyName="System.Linq" processorArchitecture="MSIL" location="Packages\System.Linq.4.3.0\lib\net463\System.Linq.dll" />
+    <AssemblyLocation assemblyName="System.Linq.Dynamic" processorArchitecture="MSIL" location="Packages\System.Linq.Dynamic.1.0.7\lib\net40\System.Linq.Dynamic.dll" />
+    <AssemblyLocation assemblyName="System.Reactive.Core" processorArchitecture="MSIL" location="Packages\Rx-Core.2.2.5\lib\net45\System.Reactive.Core.dll" />
+    <AssemblyLocation assemblyName="System.Reactive.Interfaces" processorArchitecture="MSIL" location="Packages\Rx-Interfaces.2.2.5\lib\net45\System.Reactive.Interfaces.dll" />
+    <AssemblyLocation assemblyName="System.Reactive.Linq" processorArchitecture="MSIL" location="Packages\Rx-Linq.2.2.5\lib\net45\System.Reactive.Linq.dll" />
+    <AssemblyLocation assemblyName="System.Reactive.PlatformServices" processorArchitecture="MSIL" location="Packages\Rx-PlatformServices.2.2.5\lib\net45\System.Reactive.PlatformServices.dll" />
+    <AssemblyLocation assemblyName="System.Windows.Forms" processorArchitecture="None" location="Packages\System.Windows.Forms.4.0.0.0\lib\System.Windows.Forms.dll" />
+    <AssemblyLocation assemblyName="YamlDotNet" processorArchitecture="MSIL" location="Packages\YamlDotNet.13.7.1\lib\net47\YamlDotNet.dll" />
+    <AssemblyLocation assemblyName="ZedGraph" processorArchitecture="MSIL" location="Packages\ZedGraph.5.1.7\lib\net35-Client\ZedGraph.dll" />
   </AssemblyLocations>
   <LibraryFolders>
-    <LibraryFolder path="Packages/Microsoft.Web.WebView2.1.0.1823.32/runtimes/win-arm64/native" platform="arm64" />
-    <LibraryFolder path="Packages/Microsoft.Web.WebView2.1.0.1823.32/runtimes/win-arm64/native_uap" platform="arm64" />
-    <LibraryFolder path="Packages/Microsoft.Web.WebView2.1.0.1823.32/runtimes/win-x64/native" platform="x64" />
-    <LibraryFolder path="Packages/Microsoft.Web.WebView2.1.0.1823.32/runtimes/win-x64/native_uap" platform="x64" />
-    <LibraryFolder path="Packages/Microsoft.Web.WebView2.1.0.1823.32/runtimes/win-x86/native" platform="x86" />
-    <LibraryFolder path="Packages/Microsoft.Web.WebView2.1.0.1823.32/runtimes/win-x86/native_uap" platform="x86" />
+    <LibraryFolder path="Packages\Microsoft.Web.WebView2.1.0.1823.32\runtimes\win-arm64\native" platform="arm64" />
+    <LibraryFolder path="Packages\Microsoft.Web.WebView2.1.0.1823.32\runtimes\win-arm64\native_uap" platform="arm64" />
+    <LibraryFolder path="Packages\Microsoft.Web.WebView2.1.0.1823.32\runtimes\win-x64\native" platform="x64" />
+    <LibraryFolder path="Packages\Microsoft.Web.WebView2.1.0.1823.32\runtimes\win-x64\native_uap" platform="x64" />
+    <LibraryFolder path="Packages\Microsoft.Web.WebView2.1.0.1823.32\runtimes\win-x86\native" platform="x86" />
+    <LibraryFolder path="Packages\Microsoft.Web.WebView2.1.0.1823.32\runtimes\win-x86\native_uap" platform="x86" />
+    <LibraryFolder path="Packages\OpenCV.Net.3.4.2\runtimes\win-x64\native\vc14\bin" platform="x64" />
+    <LibraryFolder path="Packages\OpenCV.Net.3.4.2\runtimes\win-x86\native\vc14\bin" platform="x86" />
   </LibraryFolders>
 </PackageConfiguration>
