--- a/.gitignore
+++ b/.gitignore
@@ -7,17 +7,9 @@ obj
 *.exe
 *.dll
 *.layout
+*.exe.*
 .venv
-*.bak
-.bak
-.config
 Packages
-Extensions
-Gallery
-*.settings
 *.csv
 *.bin
-*.csproj
 __pycache__
-.env.local
-.bonsai/
