--- a/examples/LinearDynamicalSystems/LinearRegression/ReceptiveFieldSimpleCell/.bonsai/Bonsai.config
+++ b/examples/LinearDynamicalSystems/LinearRegression/ReceptiveFieldSimpleCell/.bonsai/Bonsai.config
@@ -5,8 +5,8 @@
     <Package id="Bonsai.Core" version="2.8.1"/>
     <Package id="Bonsai.Design" version="2.8.0"/>
     <Package id="Bonsai.Editor" version="2.8.1"/>
-    <Package id="Bonsai.ML.LinearDynamicalSystems" version="0.1.1-build240320-01"/>
-    <Package id="Bonsai.ML.Visualizers" version="0.1.1-build240320-01"/>
+    <Package id="Bonsai.ML.LinearDynamicalSystems" version="0.1.1"/>
+    <Package id="Bonsai.ML.Visualizers" version="0.1.1"/>
     <Package id="Bonsai.Scripting.Python" version="0.2.1"/>
     <Package id="Bonsai.System" version="2.8.1"/>
     <Package id="jacobslusser.ScintillaNET" version="3.6.3"/>
@@ -40,8 +40,8 @@
     <AssemblyLocation assemblyName="Bonsai.Core" processorArchitecture="MSIL" location="Packages\Bonsai.Core.2.8.1\lib\net462\Bonsai.Core.dll"/>
     <AssemblyLocation assemblyName="Bonsai.Design" processorArchitecture="MSIL" location="Packages\Bonsai.Design.2.8.0\lib\net462\Bonsai.Design.dll"/>
     <AssemblyLocation assemblyName="Bonsai.Editor" processorArchitecture="MSIL" location="Packages\Bonsai.Editor.2.8.1\lib\net472\Bonsai.Editor.dll"/>
-    <AssemblyLocation assemblyName="Bonsai.ML.LinearDynamicalSystems" processorArchitecture="MSIL" location="Packages\Bonsai.ML.LinearDynamicalSystems.0.1.1-build240320-01\lib\net472\Bonsai.ML.LinearDynamicalSystems.dll"/>
-    <AssemblyLocation assemblyName="Bonsai.ML.Visualizers" processorArchitecture="MSIL" location="Packages\Bonsai.ML.Visualizers.0.1.1-build240320-01\lib\net472\Bonsai.ML.Visualizers.dll"/>
+    <AssemblyLocation assemblyName="Bonsai.ML.LinearDynamicalSystems" processorArchitecture="MSIL" location="Packages\Bonsai.ML.LinearDynamicalSystems.0.1.1\lib\net472\Bonsai.ML.LinearDynamicalSystems.dll"/>
+    <AssemblyLocation assemblyName="Bonsai.ML.Visualizers" processorArchitecture="MSIL" location="Packages\Bonsai.ML.Visualizers.0.1.1\lib\net472\Bonsai.ML.Visualizers.dll"/>
     <AssemblyLocation assemblyName="Bonsai.Scripting.Python" processorArchitecture="MSIL" location="Packages\Bonsai.Scripting.Python.0.2.1\lib\net472\Bonsai.Scripting.Python.dll"/>
     <AssemblyLocation assemblyName="Bonsai.System" processorArchitecture="MSIL" location="Packages\Bonsai.System.2.8.1\lib\net462\Bonsai.System.dll"/>
     <AssemblyLocation assemblyName="Markdig" processorArchitecture="MSIL" location="Packages\Markdig.0.18.1\lib\net40\Markdig.dll"/>
