Updated unit test to work across OSs

--- a/test/Bonsai.ML.Examples.Tests/Bonsai.ML.Examples.Tests.csproj
+++ b/test/Bonsai.ML.Examples.Tests/Bonsai.ML.Examples.Tests.csproj
@@ -28,6 +28,9 @@
     <Content Include="ReceptiveFieldSimpleCell/run_bonsai_test.sh">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="ReceptiveFieldSimpleCell/run_bonsai_test.ps1">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="ReceptiveFieldSimpleCell/receptive_field.bonsai">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
