Include nuget config in test build

--- a/test/Bonsai.ML.Examples.Tests/Bonsai.ML.Examples.Tests.csproj
+++ b/test/Bonsai.ML.Examples.Tests/Bonsai.ML.Examples.Tests.csproj
@@ -37,5 +37,8 @@
     <Content Include="ReceptiveFieldSimpleCell/Bonsai.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="ReceptiveFieldSimpleCell/NuGet.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
 </ItemGroup>
 </Project>
