--- a/examples/LinearDynamicalSystems/Kinematics/ModelOptimizationForagingMouse/.bonsai/Bonsai.config
+++ b/examples/LinearDynamicalSystems/Kinematics/ModelOptimizationForagingMouse/.bonsai/Bonsai.config
@@ -7,8 +7,8 @@
     <Package id="Bonsai.Design.Visualizers" version="2.8.0"/>
     <Package id="Bonsai.Dsp" version="2.8.0"/>
     <Package id="Bonsai.Editor" version="2.8.1"/>
-    <Package id="Bonsai.ML.LinearDynamicalSystems" version="0.1.1-build240417-01"/>
-    <Package id="Bonsai.ML.Visualizers" version="0.1.1-build240417-01"/>
+    <Package id="Bonsai.ML.LinearDynamicalSystems" version="0.2.0"/>
+    <Package id="Bonsai.ML.Visualizers" version="0.2.0"/>
     <Package id="Bonsai.Scripting" version="2.8.0"/>
     <Package id="Bonsai.Scripting.Expressions" version="2.8.0"/>
     <Package id="Bonsai.Scripting.Expressions.Design" version="2.8.0"/>
@@ -67,8 +67,8 @@
     <AssemblyLocation assemblyName="Bonsai.Design.Visualizers" processorArchitecture="MSIL" location="Packages\Bonsai.Design.Visualizers.2.8.0\lib\net462\Bonsai.Design.Visualizers.dll"/>
     <AssemblyLocation assemblyName="Bonsai.Dsp" processorArchitecture="MSIL" location="Packages\Bonsai.Dsp.2.8.0\lib\net462\Bonsai.Dsp.dll"/>
     <AssemblyLocation assemblyName="Bonsai.Editor" processorArchitecture="MSIL" location="Packages\Bonsai.Editor.2.8.1\lib\net472\Bonsai.Editor.dll"/>
-    <AssemblyLocation assemblyName="Bonsai.ML.LinearDynamicalSystems" processorArchitecture="MSIL" location="Packages\Bonsai.ML.LinearDynamicalSystems.0.1.1-build240417-01\lib\net472\Bonsai.ML.LinearDynamicalSystems.dll"/>
-    <AssemblyLocation assemblyName="Bonsai.ML.Visualizers" processorArchitecture="MSIL" location="Packages\Bonsai.ML.Visualizers.0.1.1-build240417-01\lib\net472\Bonsai.ML.Visualizers.dll"/>
+    <AssemblyLocation assemblyName="Bonsai.ML.LinearDynamicalSystems" processorArchitecture="MSIL" location="Packages\Bonsai.ML.LinearDynamicalSystems.0.2.0\lib\net472\Bonsai.ML.LinearDynamicalSystems.dll"/>
+    <AssemblyLocation assemblyName="Bonsai.ML.Visualizers" processorArchitecture="MSIL" location="Packages\Bonsai.ML.Visualizers.0.2.0\lib\net472\Bonsai.ML.Visualizers.dll"/>
     <AssemblyLocation assemblyName="Bonsai.Scripting" processorArchitecture="MSIL" location="Packages\Bonsai.Scripting.2.8.0\lib\net462\Bonsai.Scripting.dll"/>
     <AssemblyLocation assemblyName="Bonsai.Scripting.Expressions" processorArchitecture="MSIL" location="Packages\Bonsai.Scripting.Expressions.2.8.0\lib\net462\Bonsai.Scripting.Expressions.dll"/>
     <AssemblyLocation assemblyName="Bonsai.Scripting.Expressions.Design" processorArchitecture="MSIL" location="Packages\Bonsai.Scripting.Expressions.Design.2.8.0\lib\net462\Bonsai.Scripting.Expressions.Design.dll"/>
