--- a/examples/LinearDynamicalSystems/LinearRegression/SimulatedData/.bonsai/Bonsai.config
+++ b/examples/LinearDynamicalSystems/LinearRegression/SimulatedData/.bonsai/Bonsai.config
@@ -5,6 +5,7 @@
     <Package id="Bonsai.Core" version="2.8.1"/>
     <Package id="Bonsai.Design" version="2.8.0"/>
     <Package id="Bonsai.Design.Visualizers" version="2.8.0"/>
+    <Package id="Bonsai.Dsp" version="2.8.0"/>
     <Package id="Bonsai.Editor" version="2.8.1"/>
     <Package id="Bonsai.ML.LinearDynamicalSystems" version="0.2.0"/>
     <Package id="Bonsai.ML.Visualizers" version="0.2.0"/>
@@ -16,6 +17,8 @@
     <Package id="Bonsai.Scripting.IronPython.Design" version="2.8.0"/>
     <Package id="Bonsai.Scripting.Python" version="0.2.1"/>
     <Package id="Bonsai.System" version="2.8.0"/>
+    <Package id="Bonsai.Vision" version="2.8.0"/>
+    <Package id="Bonsai.Vision.Design" version="2.8.1"/>
     <Package id="IronPython" version="2.7.5"/>
     <Package id="IronPython.StdLib" version="2.7.5"/>
     <Package id="jacobslusser.ScintillaNET" version="3.6.3"/>
@@ -24,6 +27,9 @@
     <Package id="Microsoft.CSharp" version="4.7.0"/>
     <Package id="Microsoft.Web.WebView2" version="1.0.1823.32"/>
     <Package id="Newtonsoft.Json" version="13.0.3"/>
+    <Package id="OpenCV.Net" version="3.4.2"/>
+    <Package id="OpenTK" version="3.1.0"/>
+    <Package id="OpenTK.GLControl" version="3.1.0"/>
     <Package id="OxyPlot.Core" version="2.1.2"/>
     <Package id="OxyPlot.WindowsForms" version="2.1.2"/>
     <Package id="pythonnet" version="3.0.3"/>
@@ -42,6 +48,7 @@
     <AssemblyReference assemblyName="Bonsai.Core"/>
     <AssemblyReference assemblyName="Bonsai.Design"/>
     <AssemblyReference assemblyName="Bonsai.Design.Visualizers"/>
+    <AssemblyReference assemblyName="Bonsai.Dsp"/>
     <AssemblyReference assemblyName="Bonsai.Editor"/>
     <AssemblyReference assemblyName="Bonsai.ML.LinearDynamicalSystems"/>
     <AssemblyReference assemblyName="Bonsai.ML.Visualizers"/>
@@ -53,12 +60,15 @@
     <AssemblyReference assemblyName="Bonsai.Scripting.IronPython.Design"/>
     <AssemblyReference assemblyName="Bonsai.Scripting.Python"/>
     <AssemblyReference assemblyName="Bonsai.System"/>
+    <AssemblyReference assemblyName="Bonsai.Vision"/>
+    <AssemblyReference assemblyName="Bonsai.Vision.Design"/>
   </AssemblyReferences>
   <AssemblyLocations>
     <AssemblyLocation assemblyName="Bonsai" processorArchitecture="MSIL" location="Packages\Bonsai.2.8.2\lib\net48\Bonsai.exe"/>
     <AssemblyLocation assemblyName="Bonsai.Core" processorArchitecture="MSIL" location="Packages\Bonsai.Core.2.8.1\lib\net462\Bonsai.Core.dll"/>
     <AssemblyLocation assemblyName="Bonsai.Design" processorArchitecture="MSIL" location="Packages\Bonsai.Design.2.8.0\lib\net462\Bonsai.Design.dll"/>
     <AssemblyLocation assemblyName="Bonsai.Design.Visualizers" processorArchitecture="MSIL" location="Packages\Bonsai.Design.Visualizers.2.8.0\lib\net462\Bonsai.Design.Visualizers.dll"/>
+    <AssemblyLocation assemblyName="Bonsai.Dsp" processorArchitecture="MSIL" location="Packages\Bonsai.Dsp.2.8.0\lib\net462\Bonsai.Dsp.dll"/>
     <AssemblyLocation assemblyName="Bonsai.Editor" processorArchitecture="MSIL" location="Packages\Bonsai.Editor.2.8.1\lib\net472\Bonsai.Editor.dll"/>
     <AssemblyLocation assemblyName="Bonsai.ML.LinearDynamicalSystems" processorArchitecture="MSIL" location="Packages\Bonsai.ML.LinearDynamicalSystems.0.2.0\lib\net472\Bonsai.ML.LinearDynamicalSystems.dll"/>
     <AssemblyLocation assemblyName="Bonsai.ML.Visualizers" processorArchitecture="MSIL" location="Packages\Bonsai.ML.Visualizers.0.2.0\lib\net472\Bonsai.ML.Visualizers.dll"/>
@@ -70,6 +80,8 @@
     <AssemblyLocation assemblyName="Bonsai.Scripting.IronPython.Design" processorArchitecture="MSIL" location="Packages\Bonsai.Scripting.IronPython.Design.2.8.0\lib\net462\Bonsai.Scripting.IronPython.Design.dll"/>
     <AssemblyLocation assemblyName="Bonsai.Scripting.Python" processorArchitecture="MSIL" location="Packages\Bonsai.Scripting.Python.0.2.1\lib\net472\Bonsai.Scripting.Python.dll"/>
     <AssemblyLocation assemblyName="Bonsai.System" processorArchitecture="MSIL" location="Packages\Bonsai.System.2.8.0\lib\net462\Bonsai.System.dll"/>
+    <AssemblyLocation assemblyName="Bonsai.Vision" processorArchitecture="MSIL" location="Packages\Bonsai.Vision.2.8.0\lib\net462\Bonsai.Vision.dll"/>
+    <AssemblyLocation assemblyName="Bonsai.Vision.Design" processorArchitecture="MSIL" location="Packages\Bonsai.Vision.Design.2.8.1\lib\net462\Bonsai.Vision.Design.dll"/>
     <AssemblyLocation assemblyName="IronPython" processorArchitecture="MSIL" location="Packages\IronPython.2.7.5\lib\Net45\IronPython.dll"/>
     <AssemblyLocation assemblyName="IronPython.Modules" processorArchitecture="MSIL" location="Packages\IronPython.2.7.5\lib\Net45\IronPython.Modules.dll"/>
     <AssemblyLocation assemblyName="IronPython.SQLite" processorArchitecture="MSIL" location="Packages\IronPython.2.7.5\lib\Net45\IronPython.SQLite.dll"/>
@@ -84,6 +96,9 @@
     <AssemblyLocation assemblyName="Microsoft.Web.WebView2.WinForms" processorArchitecture="MSIL" location="Packages\Microsoft.Web.WebView2.1.0.1823.32\lib\net45\Microsoft.Web.WebView2.WinForms.dll"/>
     <AssemblyLocation assemblyName="Microsoft.Web.WebView2.Wpf" processorArchitecture="MSIL" location="Packages\Microsoft.Web.WebView2.1.0.1823.32\lib\net45\Microsoft.Web.WebView2.Wpf.dll"/>
     <AssemblyLocation assemblyName="Newtonsoft.Json" processorArchitecture="MSIL" location="Packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll"/>
+    <AssemblyLocation assemblyName="OpenCV.Net" processorArchitecture="MSIL" location="Packages\OpenCV.Net.3.4.2\lib\net462\OpenCV.Net.dll"/>
+    <AssemblyLocation assemblyName="OpenTK" processorArchitecture="MSIL" location="Packages\OpenTK.3.1.0\lib\net20\OpenTK.dll"/>
+    <AssemblyLocation assemblyName="OpenTK.GLControl" processorArchitecture="MSIL" location="Packages\OpenTK.GLControl.3.1.0\lib\net20\OpenTK.GLControl.dll"/>
     <AssemblyLocation assemblyName="OxyPlot" processorArchitecture="MSIL" location="Packages\OxyPlot.Core.2.1.2\lib\net45\OxyPlot.dll"/>
     <AssemblyLocation assemblyName="OxyPlot.WindowsForms" processorArchitecture="MSIL" location="Packages\OxyPlot.WindowsForms.2.1.2\lib\net45\OxyPlot.WindowsForms.dll"/>
     <AssemblyLocation assemblyName="Python.Runtime" processorArchitecture="MSIL" location="Packages\pythonnet.3.0.3\lib\netstandard2.0\Python.Runtime.dll"/>
