Updated bonsai config

--- a/examples/LinearDynamicalSystems/Kinematics/ModelOptimizationForagingMouse/.bonsai/Bonsai.config
+++ b/examples/LinearDynamicalSystems/Kinematics/ModelOptimizationForagingMouse/.bonsai/Bonsai.config
@@ -114,5 +114,7 @@
     <LibraryFolder path="Packages\Microsoft.Web.WebView2.1.0.1823.32\runtimes\win-x64\native_uap" platform="x64"/>
     <LibraryFolder path="Packages\Microsoft.Web.WebView2.1.0.1823.32\runtimes\win-x86\native" platform="x86"/>
     <LibraryFolder path="Packages\Microsoft.Web.WebView2.1.0.1823.32\runtimes\win-x86\native_uap" platform="x86"/>
+    <LibraryFolder path="Packages\OpenCV.Net.3.4.2\runtimes\win-x64\native\vc14\bin" platform="x64"/>
+    <LibraryFolder path="Packages\OpenCV.Net.3.4.2\runtimes\win-x86\native\vc14\bin" platform="x86"/>
   </LibraryFolders>
 </PackageConfiguration>
